--- a/manifest.json
+++ b/manifest.json
@@ -1,38 +1,20 @@
 {
     "name": "testPAW",
     "short_name": "PAW",
-    "start_url": "./index.html",
-    "display": "standalone",
     "icons": [
       {
-        "src": "images/touch/homescreen48.png",
-        "sizes": "48x48",
-        "type": "image/png"
+        "src": "img/maskable-icon.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "maskable"
       },
       {
-        "src": "images/touch/homescreen72.png",
-        "sizes": "72x72",
-        "type": "image/png"
-      },
-      {
-        "src": "images/touch/homescreen96.png",
-        "sizes": "96x96",
-        "type": "image/png"
-      },
-      {
-        "src": "images/touch/homescreen144.png",
-        "sizes": "144x144",
-        "type": "image/png"
-      },
-      {
-        "src": "images/touch/homescreen168.png",
-        "sizes": "168x168",
-        "type": "image/png"
-      },
-      {
-        "src": "images/touch/homescreen192.png",
+        "src": "img/icon192.png",
         "sizes": "192x192",
         "type": "image/png"
-      }
-    ]
+      }],
+    "start_url": "./index.html",
+    "display": "standalone",
+    "background_color": "#3E4EB8",
+    "theme_color": "#2F3BA2"
   }
