--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
     "name": "testPAW",
     "short_name": "PAW",
+    "description": "Description de votre application",
     "icons": [
       {
         "src": "img/maskable-icon.png",
@@ -13,6 +14,15 @@
         "sizes": "192x192",
         "type": "image/png"
       }],
+      "screenshots": [
+        {
+         "src": "img/screenshot.jpeg",
+          "sizes": "1878x850",
+          "type": "image/gif",
+          "form_factor": "wide",
+          "label": "Wonder Widgets"
+        }
+    ],
     "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#3E4EB8",
