--- a/manifest.json
+++ b/manifest.json
@@ -19,15 +19,13 @@
          "src": "img/screenshot.jpeg",
           "sizes": "1878x850",
           "type": "image/gif",
-          "form_factor": "wide",
-          "label": "Wonder Widgets"
+          "form_factor": "wide"
         },
         {
           "src": "img/screenshot-2.jpeg",
            "sizes": "450x333",
            "type": "image/gif",
-           "form_factor": "narrow",
-           "label": "Wonder Widgets"
+           "form_factor": "narrow"
          }
     ],
     "start_url": "./index.html",
